# daiquiri

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.comp  Dockerfile.dev  Dockerfile.prod  LICENSE.txt  README.md  build.rs  build.sh  dataframe.fbs  streams.json
.devcontainer/: devcontainer.json
ct-ng/: .config
libpowerdna-sys/: Cargo.toml  README.md  build.rs
libpowerdna-sys/src/: bindings.rs
powerdna/: Cargo.toml
powerdna-sys/: Cargo.toml  README.md  build.rs
powerdna-sys/src/: bindings.rs  lib.rs
powerdna/src/: boards.rs  config.rs  daq.rs  engine.rs  lib.rs  results.rs  stream.rs
powerdna/src/boards/: ai201.rs  dio405.rs
src/: bootstrap.rs  dataframe.fbs  dataframe_generated.rs  main.rs  powerdna.rs
src/powerdna/: mod.rs  results.rs
