[package]
name = "daiquiri"
version = "0.1.0"
authors = ["tmeumann <tom.meumann@ausport.gov.au>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["powerdna-sys", "powerdna"]

[dependencies]
powerdna = { path = "powerdna" }
thiserror = "1.0"
tokio = { version = "1.5", features = ["full"] }
warp = "0.3"
serde_json = "1.0"
rdkafka = { version = "0.26" }
bytemuck = "1.4"
