[package]
name = "daiquiri"
version = "0.1.0"
authors = ["Tom Meumann <tmeumann@protonmail.com>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["powerdna-sys", "powerdna"]

[dependencies]
powerdna = { path = "powerdna" }
thiserror = "1.0"
tokio = { version = "1.5", features = ["full"] }
warp = "0.3"
serde_json = "1.0"
rdkafka = { version = "0.26" }
bytemuck = "1.4"
flatbuffers = "2.0"

[build-dependencies]
flatc-rust = "0.2.0"
