[package]
name = "powerdna-sys"
version = "0.1.0"
authors = ["Tom Meumann <tmeumann@protonmail.com>"]
edition = "2021"
license = "MIT"
links = "powerdna"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
bindgen="0.59"
