[package]
name = "powerdna"
version = "0.1.0"
authors = ["tmeumann <tom.meumann@ausport.gov.au>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
powerdna-sys = { path = "../powerdna-sys" }
thiserror = "1.0"
enum_primitive = "0.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["full"] }
