[package]
name = "powerdna"
version = "0.1.0"
authors = ["Tom Meumann <tmeumann@protonmail.com>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
powerdna-sys = { path = "../powerdna-sys" }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.5", features = ["full"] }
itertools = "0.10.0"
num-traits = "0.2.14"
num-derive = "0.3.3"
